[package]
name = "cargosh"
version = "0.1.0"
edition = "2021"
authors = ["ikey4u <pwnkeeper@gmail.com>"]
description = "cargo ecosystem based cross platform shell script interpreter"
repository = "https://github.com/ikey4u/cargosh"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "command", "shell", "interpreter", "cargosh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }
indoc = "2.0.1"
log = "0.4.17"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
